Add main banner. Add some pictures for banner. Add todo file. Add gem livereload and Activate it on config.rb

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,7 +2,13 @@
 title: Drones Del Caribe
 ---
 
-<div id="home">
+<%= partial 'layouts/banner' %>
+
+
+
+<!-- Example code from template -->
+<!-- <div id="home">
+
   <div class="home-content">
     <%= image_tag "logo.png", width: "200" %>
     <p>
@@ -13,3 +19,4 @@ title: Drones Del Caribe
     </p>
   </div>
 </div>
+ -->
