Add new Colors. Adjust colors for banner

--- a/source/layouts/_banner.html.erb
+++ b/source/layouts/_banner.html.erb
@@ -1,7 +1,8 @@
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('../images/banner-6.jpg');">
+<!-- <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('../images/banner-6.jpg');"> -->
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(238,238,238,0.6) 0%, rgba(0,36,61,0.6) 100%), url('../images/banner-3.jpg');">
   <div class="banner-content">
     <h1>Drones Del Caribe</h1>
     <p>Servicios Profesionales</p>
-    <a class="btn btn-primary btn-lg">Explorar</a>
+    <a class="btn btn-danger btn-lg">Explorar</a>
   </div>
 </div>
