--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -1,10 +1,60 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #EE5F5B;
+// $red: #EE5F5B;
 $blue: #469AE0;
 $yellow: #FDB631;
 $orange: #E67E22;
 $green: #32B796;
-$gray: #000000;
+// $gray: #000000;
 $light-gray: #F4F4F4;
+
+// Added by RP:
+$red: #ee2b47; //from colorhunt
+$gray: #999; //from mockup
+
+
+
+
+
+/* TESTING COLORS
+/* __________________________________ */
+
+// red from publisher:
+// $red: rgb(255, 0, 0);
+
+
+// ----------------------------------
+// COLOR HUNT:
+
+// from: http://colorhunt.co/c/114174
+// $ddc-black: #283149;
+// $ddc-black-light: 404B69;
+// $ddc-red: f73859;
+// $ddc-gray-lighter: dbedf3;
+
+// a little bit darker on black. from http://colorhunt.co/c/98625  - VERY NICE ONE
+// $ddc-black: #2c2e3e;
+// $ddc-black-light: 34374c;
+// $ddc-red: ee2b47;
+// $ddc-gray-lighter: f6f6f6;
+
+
+$ddc-black: rgb(51, 51, 51); //from mockup
+$ddc-light-black: #292d33; //rgb(39, 40, 34); from mockup
+$ddc-sand: #EEEEEE; //rgb(238, 238, 238); from mockup
+$ddc-sand-light: #f6f6f6; //from colorhunt
+$ddc-sand-lighter: #F7F7F7; //rgb(247, 247, 247); //from mockup
+
+
+
+/* FONT COLORS
+/* __________________________________ */
+
+h1 {
+  color: $ddc-light-black !important;
+}
+
+p {
+  color: $gray;
+}
