--- a/source/stylesheets/components/_banner.scss
+++ b/source/stylesheets/components/_banner.scss
@@ -16,7 +16,8 @@
 .banner p {
   font-size: 25px;
   font-weight: lighter;
-  color: rgb(255, 255, 255);
+  // color: rgb(255, 255, 255);
+  color: $ddc-sand-lighter;
   opacity: 0.6;
   margin-bottom: 30px;
 }
