--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -37,11 +37,13 @@
 
 /* Navbar link */
 .navbar-wagon-link {
-  color: #616668;
+  color: $ddc-light-black;
   font-size: 14px;
+  font-weight: bold;
 }
 .navbar-wagon-link:hover {
-  color: #da552f;
+  // color: #da552f;
+  color: $red;
   text-decoration: none;
 }
 
