Add About section. Add main.scss and avatar.scss. Set color style for h2 and h3

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,6 +3,44 @@ title: Drones Del Caribe
 ---
 
 <%= partial 'layouts/banner' %>
+<!-- <div id="about-us" class="bckg-sand-lighter">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 col-md-4">
+          SOME CONTENT
+      </div>
+    </div>
+  </div>
+</div> -->
+
+<div class="container">
+  <div class="row">
+    <div id="about-us" class="bckg-sand-lighter flex-container space-around flex-wrap pad-y-100">
+      <h2 class="subtitle text-center mar-bottom-40">Acerca de nosotros</h2>
+      <div class="flex-item">
+         <%= image_tag "http://placekitten.com/200/200", :class => "center-block avatar-x-large avatar-square mar-bottom-30" %>
+         <h3 class="text-center">Kathy</h3>
+         <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque porta ultrices rutrum. Praesent interdum purus tempor massa mattis volutpat. Nam massa dolor, eleifend nec orci ut, suscipit egestas magna. Nam ut tristique erat. Aliquam eu eleifend urna. Pellentesque a justo neque. Morbi vitae nunc venenatis, varius odio eget, rhoncus justo. Sed vestibulum, turpis nec tincidunt molestie, odio neque pulvinar dui, eget laoreet diam purus a erat. Integer felis lorem, luctus ac dictum a
+          , aliquet in justo. Mauris volutpat quam nec augue aliquam vulputate.</p>
+      </div>
+      <div class="flex-item">
+         <%= image_tag "http://placekitten.com/200/200", :class => "center-block avatar-x-large avatar-square mar-bottom-30" %>
+         <h3 class="text-center">Mario</h3>
+         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque porta ultrices rutrum. Praesent interdum purus tempor massa mattis volutpat. Nam massa dolor, eleifend nec orci ut, suscipit egestas magna. Nam ut tristique erat. Aliquam eu eleifend urna. Pellentesque a justo neque. Morbi vitae nunc venenatis, varius odio eget, rhoncus justo. Sed vestibulum, turpis nec tincidunt molestie, odio neque pulvinar dui, eget laoreet diam purus a erat. Integer felis lorem, luctus ac dictum a
+          , aliquet in justo. Mauris volutpat quam nec augue aliquam vulputate.</p>
+      </div>
+      <div class="flex-item">
+         <%= image_tag "http://placekitten.com/200/200", :class => "center-block avatar-x-large avatar-square mar-bottom-30" %>
+         <h3 class="text-center">Soinsa</h3>
+         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque porta ultrices rutrum. Praesent interdum purus tempor massa mattis volutpat. Nam massa dolor, eleifend nec orci ut, suscipit egestas magna. Nam ut tristique erat. Aliquam eu eleifend urna. Pellentesque a justo neque. Morbi vitae nunc venenatis, varius odio eget, rhoncus justo. Sed vestibulum, turpis nec tincidunt molestie, odio neque pulvinar dui, eget laoreet diam purus a erat. Integer felis lorem, luctus ac dictum a, aliquet in justo. Mauris volutpat quam nec augue aliquam vulputate.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
 
 
 
@@ -20,3 +58,6 @@ title: Drones Del Caribe
   </div>
 </div>
  -->
+
+
+
