Add sections About and Services. Add generic styles for colors and fonts. Small change on gemfile for font-awesome gem

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,36 +3,122 @@ title: Drones Del Caribe
 ---
 
 <%= partial 'layouts/banner' %>
-<!-- <div id="about-us" class="bckg-sand-lighter">
+<div id="about-us" class="pad-y-100">
   <div class="container">
+    <div class="row mar-bottom-40">
+      <div class="col-xs-12 col-sm-12">
+        <h2 class="subtitle text-center">EQUIPO</h2>
+        <h3 class="text-center mar-bottom-40 second-subtitle">Los drones son una pasión</h3>
+        <p class="text-center dots mar-bottom-40">
+          &middot;&middot;&middot;&middot;&middot;
+        </p>
+      </div>
+    </div>
     <div class="row">
-      <div class="col-xs-12 col-sm-6 col-md-4">
-          SOME CONTENT
+      <div class="col-xs-12 col-sm-12">
+        <div class="flex-container space-between flex-wrap">
+          <div class="flex-item mar-bottom-20">
+            <%= image_tag "http://placekitten.com/200/200", :class => "center-block avatar-x-large avatar-square mar-bottom-30" %>
+            <h3 class="text-center">Kathy</h3>
+            <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque porta ultrices rutrum. Praesent interdum purus tempor massa mattis volutpat. Nam massa dolor, eleifend nec orci ut, suscipit egestas magna. Nam ut tristique erat. Aliquam eu eleifend urna. Pellentesque a justo neque. Morbi vitae nunc venenatis, varius odio eget, rhoncus justo. Sed vestibulum, turpis nec tincidunt molestie, odio neque pulvinar dui, eget laoreet diam purus a erat. Integer felis lorem, luctus ac dictum a
+            , aliquet in justo. Mauris volutpat quam nec augue aliquam vulputate.</p>
+          </div>
+          <div class="flex-item mar-bottom-20">
+             <%= image_tag "http://placekitten.com/200/200", :class => "center-block avatar-x-large avatar-square mar-bottom-30" %>
+             <h3 class="text-center">Mario</h3>
+             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque porta ultrices rutrum. Praesent interdum purus tempor massa mattis volutpat. Nam massa dolor, eleifend nec orci ut, suscipit egestas magna. Nam ut tristique erat. Aliquam eu eleifend urna. Pellentesque a justo neque. Morbi vitae nunc venenatis, varius odio eget, rhoncus justo. Sed vestibulum, turpis nec tincidunt molestie, odio neque pulvinar dui, eget laoreet diam purus a erat. Integer felis lorem, luctus ac dictum a
+              , aliquet in justo. Mauris volutpat quam nec augue aliquam vulputate.</p>
+          </div>
+          <div class="flex-item">
+             <%= image_tag "http://placekitten.com/200/200", :class => "center-block avatar-x-large avatar-square mar-bottom-30" %>
+             <h3 class="text-center">Soinsa</h3>
+             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque porta ultrices rutrum. Praesent interdum purus tempor massa mattis volutpat. Nam massa dolor, eleifend nec orci ut, suscipit egestas magna. Nam ut tristique erat. Aliquam eu eleifend urna. Pellentesque a justo neque. Morbi vitae nunc venenatis, varius odio eget, rhoncus justo. Sed vestibulum, turpis nec tincidunt molestie, odio neque pulvinar dui, eget laoreet diam purus a erat. Integer felis lorem, luctus ac dictum a, aliquet in justo. Mauris volutpat quam nec augue aliquam vulputate.</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-</div> -->
+</div>
+<div class="bckg-white pad-y-100" id="services">
+  <div class="container">
+    <div class="row">
 
-<div class="container">
-  <div class="row">
-    <div id="about-us" class="bckg-sand-lighter flex-container space-around flex-wrap pad-y-100">
-      <h2 class="subtitle text-center mar-bottom-40">Acerca de nosotros</h2>
-      <div class="flex-item">
-         <%= image_tag "http://placekitten.com/200/200", :class => "center-block avatar-x-large avatar-square mar-bottom-30" %>
-         <h3 class="text-center">Kathy</h3>
-         <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque porta ultrices rutrum. Praesent interdum purus tempor massa mattis volutpat. Nam massa dolor, eleifend nec orci ut, suscipit egestas magna. Nam ut tristique erat. Aliquam eu eleifend urna. Pellentesque a justo neque. Morbi vitae nunc venenatis, varius odio eget, rhoncus justo. Sed vestibulum, turpis nec tincidunt molestie, odio neque pulvinar dui, eget laoreet diam purus a erat. Integer felis lorem, luctus ac dictum a
-          , aliquet in justo. Mauris volutpat quam nec augue aliquam vulputate.</p>
-      </div>
-      <div class="flex-item">
-         <%= image_tag "http://placekitten.com/200/200", :class => "center-block avatar-x-large avatar-square mar-bottom-30" %>
-         <h3 class="text-center">Mario</h3>
-         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque porta ultrices rutrum. Praesent interdum purus tempor massa mattis volutpat. Nam massa dolor, eleifend nec orci ut, suscipit egestas magna. Nam ut tristique erat. Aliquam eu eleifend urna. Pellentesque a justo neque. Morbi vitae nunc venenatis, varius odio eget, rhoncus justo. Sed vestibulum, turpis nec tincidunt molestie, odio neque pulvinar dui, eget laoreet diam purus a erat. Integer felis lorem, luctus ac dictum a
-          , aliquet in justo. Mauris volutpat quam nec augue aliquam vulputate.</p>
-      </div>
-      <div class="flex-item">
-         <%= image_tag "http://placekitten.com/200/200", :class => "center-block avatar-x-large avatar-square mar-bottom-30" %>
-         <h3 class="text-center">Soinsa</h3>
-         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque porta ultrices rutrum. Praesent interdum purus tempor massa mattis volutpat. Nam massa dolor, eleifend nec orci ut, suscipit egestas magna. Nam ut tristique erat. Aliquam eu eleifend urna. Pellentesque a justo neque. Morbi vitae nunc venenatis, varius odio eget, rhoncus justo. Sed vestibulum, turpis nec tincidunt molestie, odio neque pulvinar dui, eget laoreet diam purus a erat. Integer felis lorem, luctus ac dictum a, aliquet in justo. Mauris volutpat quam nec augue aliquam vulputate.</p>
+      <div class="col-sm-8 col-sm-offset-4">
+        <h2 class="text-center">SERVICIOS</h2>
+        <h3 class="text-center second-subtitle">
+          En esto te podemos ayudar
+        </h3>
+        <p class="text-center dots mar-bottom-40">
+          &middot;&middot;&middot;&middot;&middot;
+        </p>
+        <!-- TODO delete those ellipsis if not needed -->
+        <!-- <i class="fas fa-ellipsis-h"></i> -->
+
+        <div class="card-services">
+          <div class="image-container">
+            <%= image_tag "http://placekitten.com/46/46", :class => "" %>
+          </div>
+          <div class="content-container">
+            <h4>
+              LEVANTAMIENTO TOPOGRAFICO
+            </h4>
+            <p>
+              Si necesitas mediciones de un terreno o analizar el suelo para realizar obras de ingeniería, realizarlo a través de drones te ahorrará tiempo y costos.
+            </p>
+          </div>
+        </div>
+        <div class="card-services">
+          <div class="image-container">
+            <%= image_tag "http://placekitten.com/46/46", :class => "" %>
+          </div>
+          <div>
+            <h4>
+              INSPECCIONES INDUSTRIALES
+            </h4>
+            <p>
+              Obtenemos la información necesaria para realizar análisis estructurales e inspección de obras civiles a partir de imágenes de alta resolución; disminuyendo tiempo y riesgos laborales al no necesitar personas en alturas.
+            </p>
+          </div>
+        </div>
+        <div class="card-services">
+          <div class="image-container">
+            <%= image_tag "http://placekitten.com/46/46", :class => "" %>
+          </div>
+          <div>
+            <h4>
+              ATENCION DE EMERGENCIAS, BUSQUEDA Y RESCATE
+            </h4>
+            <p>
+              Realizamos vuelos sobre zonas afectadas por desastres naturales y/o emergencias para facilitar la búsqueda de sobrevivientes o desparecidos.
+            </p>
+          </div>
+        </div>
+        <div class="card-services">
+          <div class="image-container">
+            <%= image_tag "http://placekitten.com/46/46", :class => "" %>
+          </div>
+          <div>
+            <h4>
+              CINE Y TELEVISION
+            </h4>
+            <p>
+              Obtén las tomas y planos aéreos que siempre has imaginado para tu película, video musical, documental o video periodístico, consiguiendo resultados espectaculares que le darán un valor añadido a tu proyecto audiovisual.
+            </p>
+          </div>
+        </div>
+        <div class="card-services">
+          <div class="image-container">
+            <%= image_tag "http://placekitten.com/46/46", :class => "" %>
+          </div>
+          <div>
+            <h4>
+              BODAS Y EVENTOS
+            </h4>
+            <p>
+              Servicio de video para celebraciones y eventos sociales de gran importancia y trascendencia, como el festejo de tu matrimonio.
+            </p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -43,7 +129,7 @@ title: Drones Del Caribe
 
 
 
-
+<!-- TODO delete later -->
 <!-- Example code from template -->
 <!-- <div id="home">
 
@@ -58,6 +144,3 @@ title: Drones Del Caribe
   </div>
 </div>
  -->
-
-
-
