--- a/source/layouts/_navbar.html.erb
+++ b/source/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar-wagon">
+<div class="navbar-wagon bckg-sand">
   <!-- Logo -->
   <a href="/" class="navbar-wagon-brand">
     <img src="images/logo_vertical_color.png" alt="logo">
