adds footer,common css, updates layout and index,etc

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,7 +2,7 @@
 title: Drones Del Caribe
 ---
 
-<%= partial 'layouts/banner' %>
+<!-- <%= partial 'layouts/banner' %> -->
 <div id="about-us" class="pad-y-100">
   <div class="container">
     <div class="row mar-bottom-40">
