--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -13,6 +13,7 @@
   <body>
     <%= partial 'layouts/navbar' %>
     <%= yield %>
+    <%= partial 'layouts/footer' %>
     <%= javascript_include_tag "application" %>
   </body>
 </html>
