Updates gemfile (replace font-awesome-middleman by font-awesome-sass and upgrade sprockets version). Adds new sections (drone spec and services), updates services section. Reorganise css. Adds new generic css styles. Updates gray scale used for sections

--- a/source/layouts/_footer.html.erb
+++ b/source/layouts/_footer.html.erb
@@ -4,16 +4,16 @@
       <div class="col-xs-12 col-sm-12">
         <div class="flex-container space-between vertical-center">
           <p class="flex-item">COPYRIGHT 2018 © Drones Del Caribe<br>Diseño logos por El publicista<br>Diseño web y Dessarollo por rafaelhperezg@gmail.com</p>
-          <%= image_tag "logo_vertical_color.png", :class => "flex-item logo" %>
+          <%= image_tag "drones_del_caribe_logo.png", :class => "flex-item logo" %>
           <div class="social-links flex-item">
             <p>Síguenos en:</p>
             <div class="links-container">
               <% admin = data.admin %>
               <% link_to "https://facebook.com/#{admin.facebook_nickname}", target: "_blank" do %>
-                <i class="link-social fa fa-facebook" aria-hidden="true"></i>
+                <i class="link-social fab fa-facebook" aria-hidden="true"></i>
               <% end %>
               <% link_to "https://facebook.com/#{admin.instagram_nickname}", target: "_blank" do %>
-                <i class="link-social fa fa-instagram"></i>
+                <i class="link-social fab fa-instagram"></i>
               <% end %>
             </div>
           </div>
