--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,8 +2,10 @@
 title: Drones Del Caribe
 ---
 
-<!-- <%= partial 'layouts/banner' %> -->
-<div id="about-us" class="pad-y-100">
+<%= partial 'layouts/banner' %>
+
+<!-- ABOUT -->
+<div id="about-us" class="bckg-sand pad-y-100">
   <div class="container">
     <div class="row mar-bottom-40">
       <div class="col-xs-12 col-sm-12">
@@ -31,7 +33,7 @@ title: Drones Del Caribe
           </div>
           <div class="flex-item">
              <%= image_tag "http://placekitten.com/200/200", :class => "center-block avatar-x-large avatar-square mar-bottom-30" %>
-             <h3 class="text-center">Soinsa</h3>
+             <h3 class="text-center">Dron</h3>
              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque porta ultrices rutrum. Praesent interdum purus tempor massa mattis volutpat. Nam massa dolor, eleifend nec orci ut, suscipit egestas magna. Nam ut tristique erat. Aliquam eu eleifend urna. Pellentesque a justo neque. Morbi vitae nunc venenatis, varius odio eget, rhoncus justo. Sed vestibulum, turpis nec tincidunt molestie, odio neque pulvinar dui, eget laoreet diam purus a erat. Integer felis lorem, luctus ac dictum a, aliquet in justo. Mauris volutpat quam nec augue aliquam vulputate.</p>
           </div>
         </div>
@@ -39,7 +41,8 @@ title: Drones Del Caribe
     </div>
   </div>
 </div>
-<div class="bckg-white pad-y-100" id="services">
+<!-- SERVICES -->
+<div class="pad-y-100" id="services">
   <div class="container">
     <div class="row">
 
@@ -55,8 +58,8 @@ title: Drones Del Caribe
         <!-- <i class="fas fa-ellipsis-h"></i> -->
 
         <div class="card-services">
-          <div class="image-container">
-            <%= image_tag "http://placekitten.com/46/46", :class => "" %>
+          <div class="icon-container">
+            <i class="fas fa-map-marked red"></i>
           </div>
           <div class="content-container">
             <h4>
@@ -68,8 +71,8 @@ title: Drones Del Caribe
           </div>
         </div>
         <div class="card-services">
-          <div class="image-container">
-            <%= image_tag "http://placekitten.com/46/46", :class => "" %>
+          <div class="icon-container">
+            <i class="fas fa-industry red"></i>
           </div>
           <div>
             <h4>
@@ -81,8 +84,8 @@ title: Drones Del Caribe
           </div>
         </div>
         <div class="card-services">
-          <div class="image-container">
-            <%= image_tag "http://placekitten.com/46/46", :class => "" %>
+          <div class="icon-container">
+            <i class="fas fa-search red"></i>
           </div>
           <div>
             <h4>
@@ -94,8 +97,8 @@ title: Drones Del Caribe
           </div>
         </div>
         <div class="card-services">
-          <div class="image-container">
-            <%= image_tag "http://placekitten.com/46/46", :class => "" %>
+          <div class="icon-container">
+            <i class="fas fa-video red"></i>
           </div>
           <div>
             <h4>
@@ -107,15 +110,15 @@ title: Drones Del Caribe
           </div>
         </div>
         <div class="card-services">
-          <div class="image-container">
-            <%= image_tag "http://placekitten.com/46/46", :class => "" %>
+          <div class="icon-container">
+            <i class="fas fa-glass-cheers red"></i>
           </div>
           <div>
             <h4>
-              BODAS Y EVENTOS
+              EVENTOS Y VIDEOS PUBLICITARIOS
             </h4>
             <p>
-              Servicio de video para celebraciones y eventos sociales de gran importancia y trascendencia, como el festejo de tu matrimonio.
+              Servicio de video para celebraciones y eventos sociales, así como para promocionar lugares o productos.
             </p>
           </div>
         </div>
@@ -123,9 +126,163 @@ title: Drones Del Caribe
     </div>
   </div>
 </div>
+<!-- TODO dron images -->
+<div class="bckg-sand pad-y-100" id="drone-spec">
+  <div class="container">
+    <div class="row">
+      <div class="flex-container space-between flex-wrap">
 
+<!--         <div class="flex-item text-center">
+          <%= image_tag '../images/drone-zoomed.jpg', :class => ""%>
+        </div> -->
+        <div class="flex-item text-center">
+          <p class="drone-details black">
+            Phantom 4 Pro
+          </p>
+          <p class="text-center dots mar-bottom-40">
+            &middot;&middot;&middot;&middot;&middot;
+          </p>
+          <h5 class="red">
+            Nuestro modelo
+          </h5>
+        </div>
+        <div class="flex-item text-center">
+          <p class="drone-details black">
+            20 Megapixeles
+          </p>
+          <p class="text-center dots mar-bottom-40">
+            &middot;&middot;&middot;&middot;&middot;
+          </p>
+          <h5 class="red">
+            Resolución imagen
+          </h5>
+        </div>
+        <div class="flex-item text-center">
+          <p class="drone-details black">
+            4K
+          </p>
+          <p class="text-center dots mar-bottom-40">
+            &middot;&middot;&middot;&middot;&middot;
+          </p>
+          <h5 class="red">
+            Resolución video
+          </h5>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- PROYECTOS -->
+<div class="pad-y-100" id="projects">
+  <div class="container">
+    <div class="row mar-bottom-40">
+      <div class="col-xs-12 col-sm-12">
+        <h2 class="subtitle text-center">PROYECTOS</h2>
+        <h3 class="text-center mar-bottom-40 second-subtitle">Algunos proyectos seleccionados</h3>
+        <p class="text-center dots mar-bottom-40">
+          &middot;&middot;&middot;&middot;&middot;
+        </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12 col-sm-12">
+        <div class="flex-container space-between flex-wrap">
 
+          <div class="flex-item text-center mar-bottom-20">
+            <iframe width="380" height="200" src="https://www.youtube.com/embed/q7vCjB3wHn0" frameborder="0" rel="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" modestbranding="1"></iframe>
+            <h4 class="text-center">Trashumancia</h4>
+          </div>
 
+          <div class="flex-item text-center mar-bottom-20">
+            <iframe width="380" height="200" src="https://www.youtube.com/embed/q7vCjB3wHn0" frameborder="0" rel="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" modestbranding="1"></iframe>
+             <h4 class="text-center">Inspección Torres Eléctricas</h4>
+          </div>
+
+          <div class="flex-item text-center">
+             <iframe width="380" height="200" src="https://www.youtube.com/embed/q7vCjB3wHn0" frameborder="0" rel="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" modestbranding="1"></iframe>
+             <h4 class="text-center">Topógrafico</h4>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- CONTACT -->
+<div class="pad-y-100 bckg-sand" id="contact">
+  <div class="container">
+    <div class="row mar-bottom-40">
+      <div class="col-xs-12 col-sm-7" id="contact-left-side">
+        <h2 class="subtitle text-center">CONTACTANOS</h2>
+        <h3 class="text-center mar-bottom-40 second-subtitle">Estamos a tu escucha</h3>
+        <p class="text-center dots mar-bottom-40">
+          &middot;&middot;&middot;&middot;&middot;
+        </p>
+        <p>
+          Todas las preguntas son bienvenidas. Si tienes un proyecto y quieres saber cómo te podemos colaborar; si quieres saber más acerca de nosotros y nuestra metodología; precios; etc...
+        </p>
+<!--         <p>Preguntas acerca de:</p>
+        <ul>
+          <li>Precios</li>
+          <li>Hasta dónde nos desplazamos</li>
+          <li>Más información acerca de nosotros, nuestra metodología</li>
+          <li>Mapas Fincas</li>
+          <li>...</li>
+        </ul> -->
+        <% admin = data.admin %>
+        <ul class="contact-list">
+          <li class="">
+            <i class="link-social fa fa-envelope" aria-hidden="true"></i>
+            <span><%= admin.email %></span>
+          </li>
+          <li class="">
+            <i class="link-social fab fa-whatsapp-square" aria-hidden="true"></i>
+            <span>314 - 580 15 89</span>
+          </li>
+          <li class="">
+            <i class="link-social fa fa-phone-square" aria-hidden="true"></i>
+            <span>314 - 580 15 89</span>
+          </li>
+        </ul>
+        <div class="links-container">
+          <p>Redes Sociales</p>
+
+          <% link_to "https://facebook.com/#{admin.facebook_nickname}", target: "_blank" do %>
+            <i class="link-social fab fa-facebook" aria-hidden="true"></i>
+          <% end %>
+          <% link_to "https://facebook.com/#{admin.instagram_nickname}", target: "_blank" do %>
+            <i class="link-social fab fa-instagram"></i>
+          <% end %>
+        </div>
+      </div>
+
+      <div class="col-xs-12 col-sm-5" id="contact-right-side">
+        <h2 class="text-left mar-bottom-40 black">Envianos tu mensaje</h2>
+        <p>Nos puedes contactar directamente a nuestro teléfono o email, o a través de este formulario.</p>
+        <div class="form-container">
+          <form id="contact-form" method="POST" action="https://formspree.io/contacto.dronesdelcaribe@gmail.com">
+            <div class="form-group">
+              <input type="text" name="name" placeholder="Nombre" class="form-control bckg-sand-lighter">
+            </div>
+            <div class="form-group">
+              <input type="email" name="email" placeholder="Email" class="form-control bckg-sand-lighter">
+            </div>
+            <div class="form-group">
+              <input type="phone" name="phone" placeholder="Teléfono" class="form-control bckg-sand-lighter">
+            </div>
+            <div class="form-group">
+              <textarea name="message" placeholder="Mensaje" rows="5" class="form-control bckg-sand-lighter"></textarea>
+            </div>
+            <div class="form-group">
+              <button type="submit" class="btn btn-danger">Enviar</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- TODO anadir sitios donde se desplazan -->
 
 
 
