--- a/source/stylesheets/application.css.scss
+++ b/source/stylesheets/application.css.scss
@@ -7,6 +7,7 @@
 // External libraries
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "font-awesome-sprockets"; //TODO I added this after deleting font awesome gem, is a test may be ill keep it
 @import "font-awesome";
 
 // Your CSS partials
