--- a/source/stylesheets/components/_card-services.scss
+++ b/source/stylesheets/components/_card-services.scss
@@ -2,11 +2,13 @@ div.card-services {
   display: flex;
   align-items: center;
   margin-top: 10px;
-  .image-container {
+  .icon-container {
     flex: 0 0 76px;
-    img {
-      display: block;
-      margin: 0 auto;
+    text-align: center;
+    i {
+      // display: block;
+      // margin: 0 auto;
+      font-size: 30px;
     }
   }
   .content-container {
