Adds drones images on background of drone-spec section

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -128,13 +128,15 @@ title: Drones Del Caribe
 </div>
 <!-- TODO dron images -->
 <div class="bckg-sand pad-y-100" id="drone-spec">
+  <div class="image-container-top">
+    <%= image_tag '../images/drone_phantom-4-pro-transparent-bckg-400x234.png', :class => "card-image"%>
+  </div>
+  <div class="image-container-bottom">
+    <%= image_tag '../images/drone_phantom-4-pro-transparent-bckg-400x234.png', :class => "card-image"%>
+  </div>
   <div class="container">
     <div class="row">
       <div class="flex-container space-between flex-wrap">
-
-<!--         <div class="flex-item text-center">
-          <%= image_tag '../images/drone-zoomed.jpg', :class => ""%>
-        </div> -->
         <div class="flex-item text-center">
           <p class="drone-details black">
             Phantom 4 Pro
