Delete flex on sectiom Quienes somos and let only one team member

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -18,25 +18,12 @@ title: Drones Del Caribe
     </div>
     <div class="row">
       <div class="col-xs-12 col-sm-12">
-        <div class="flex-container space-between flex-wrap">
-          <div class="flex-item mar-bottom-20">
-            <%= image_tag "http://placekitten.com/200/200", :class => "center-block avatar-x-large avatar-square mar-bottom-30" %>
-            <h3 class="text-center">Kathy</h3>
-            <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque porta ultrices rutrum. Praesent interdum purus tempor massa mattis volutpat. Nam massa dolor, eleifend nec orci ut, suscipit egestas magna. Nam ut tristique erat. Aliquam eu eleifend urna. Pellentesque a justo neque. Morbi vitae nunc venenatis, varius odio eget, rhoncus justo. Sed vestibulum, turpis nec tincidunt molestie, odio neque pulvinar dui, eget laoreet diam purus a erat. Integer felis lorem, luctus ac dictum a
-            , aliquet in justo. Mauris volutpat quam nec augue aliquam vulputate.</p>
-          </div>
-          <div class="flex-item mar-bottom-20">
-             <%= image_tag "http://placekitten.com/200/200", :class => "center-block avatar-x-large avatar-square mar-bottom-30" %>
-             <h3 class="text-center">Mario</h3>
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque porta ultrices rutrum. Praesent interdum purus tempor massa mattis volutpat. Nam massa dolor, eleifend nec orci ut, suscipit egestas magna. Nam ut tristique erat. Aliquam eu eleifend urna. Pellentesque a justo neque. Morbi vitae nunc venenatis, varius odio eget, rhoncus justo. Sed vestibulum, turpis nec tincidunt molestie, odio neque pulvinar dui, eget laoreet diam purus a erat. Integer felis lorem, luctus ac dictum a
-              , aliquet in justo. Mauris volutpat quam nec augue aliquam vulputate.</p>
-          </div>
-          <div class="flex-item">
-             <%= image_tag "http://placekitten.com/200/200", :class => "center-block avatar-x-large avatar-square mar-bottom-30" %>
-             <h3 class="text-center">Dron</h3>
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque porta ultrices rutrum. Praesent interdum purus tempor massa mattis volutpat. Nam massa dolor, eleifend nec orci ut, suscipit egestas magna. Nam ut tristique erat. Aliquam eu eleifend urna. Pellentesque a justo neque. Morbi vitae nunc venenatis, varius odio eget, rhoncus justo. Sed vestibulum, turpis nec tincidunt molestie, odio neque pulvinar dui, eget laoreet diam purus a erat. Integer felis lorem, luctus ac dictum a, aliquet in justo. Mauris volutpat quam nec augue aliquam vulputate.</p>
-          </div>
+        <div class="member-container text-center">
+           <%= image_tag "https://via.placeholder.com/200x200.png?text=Mario", :class => "center-block avatar-x-large avatar-square mar-bottom-30" %>
+           <h3>Mario</h3>
+           <p>Mario Pérez es un piloto de aeromodelismo y RPAS CON MÁS DE 20 años de experiencia, lo que permite mayor seguridad en el manejo de este tipo de aeronaves, además de utilizar Drones de última tecnología que permiten gravar videos 4K e imágenes con 20 megapixeles para poder brindar un exelente servicio.</p>
         </div>
+
       </div>
     </div>
   </div>
