Replace name of Equipo by Quienes somom

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,7 +9,7 @@ title: Drones Del Caribe
   <div class="container">
     <div class="row mar-bottom-40">
       <div class="col-xs-12 col-sm-12">
-        <h2 class="subtitle text-center">EQUIPO</h2>
+        <h2 class="subtitle text-center">QUIENES SOMOS</h2>
         <h3 class="text-center mar-bottom-40 second-subtitle">Los drones son una pasión</h3>
         <p class="text-center dots mar-bottom-40">
           &middot;&middot;&middot;&middot;&middot;
