Adds 2 new images to projects section. Adds css for dimensions

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -183,13 +183,13 @@ title: Drones Del Caribe
           </div>
 
           <div class="flex-item text-center mar-bottom-20">
-            <iframe width="380" height="200" src="https://www.youtube.com/embed/q7vCjB3wHn0" frameborder="0" rel="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" modestbranding="1"></iframe>
-             <h4 class="text-center">Inspección Torres Eléctricas</h4>
+            <%= image_tag "fotografia_aerea_cartagena.jpg", class: "image-project", alt:"Levantamiento Topográfico con Dron" %>
+             <h4 class="text-center">Panorámica Cartagena</h4>
           </div>
 
           <div class="flex-item text-center">
-             <iframe width="380" height="200" src="https://www.youtube.com/embed/q7vCjB3wHn0" frameborder="0" rel="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" modestbranding="1"></iframe>
-             <h4 class="text-center">Topógrafico</h4>
+            <%= image_tag "plano_dron_finca_tacamocho.jpg", class: "image-project", alt:"Levantamiento Topográfico con Dron" %>
+             <h4 class="text-center">Levantamiento Topográfico</h4>
           </div>
         </div>
       </div>
